Trying to fix centering on mobile.

--- a/_sass/components/_image-posts.scss
+++ b/_sass/components/_image-posts.scss
@@ -58,15 +58,15 @@ img {
             margin-left: auto;
             margin-right: auto;
             max-width: 600px;
-            width: 100%;
+            //width: 100%;
 
 			img {
 				width: 100%;
-			}
+			}/*
 
 			@include breakpoint(small) {
 				margin: (_size(element-margin) * 0.75) 0;
-			}
+			}*/
 		}
 
 	}
